# Edge-Case-Generator

./: .gitignore  Makefile  README.md  diagnose_hf_runtime.py  inspect_llm_baseline.py  pyproject.toml  requirements.txt  run_hf_debug.sh  run_hf_research.sh  run_hf_research_gpu.sh  run_hf_tiny_long.sh  train_edge_case_generator.py
edge_case_generator/: __init__.py  config.py  export.py  types.py
edge_case_generator/buffer/: __init__.py  replay_buffer.py
edge_case_generator/collection/: __init__.py  buggy.py  catalog.py  execution.py  io.py  mutations.py  parsing.py  pipeline.py  sampling.py  selection.py  types.py
edge_case_generator/configs/: collection_debug.yaml  collection_default.yaml  debug.yaml  default_research.yaml  grpo_ablation_verify_only.yaml  hf_lora_debug.yaml  hf_lora_research.yaml  hf_lora_research_gpu.yaml  hf_lora_tiny_long.yaml
edge_case_generator/datasets/: candidates.py  jsonl_dataset.py
edge_case_generator/models/: __init__.py  base.py  factory.py  llm_policy.py  prompting.py  template_policy.py
edge_case_generator/rewards/: __init__.py  components.py
edge_case_generator/rl/: __init__.py  trainer.py
edge_case_generator/scripts/: collect_buggy_programs.py  collect_problems.py  collection_common.py  common.py  export_augmented_dataset.py  generate_supervised_edge_cases.py  generate_synthetic_bugs.py  run_data_collection_pipeline.py  run_data_collection_smoke_test.py  run_smoke_test.py  select_gt_solutions.py  train_edge_case_generator.py  verify_candidates.py
edge_case_generator/tests/: test_buffer.py  test_candidates.py  (+16 more)
(+11 files in other folders)
